<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.bottomsheet.MealBottomSheetFragment">

    <ImageView
        android:id="@+id/img_btnsheet"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:layout_marginStart="8dp"
        android:src="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_btnsheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_btnsheet"
        app:layout_constraintTop_toTopOf="@id/img_btnsheet">


        <TextView
            android:id="@+id/txt_btnsheet_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/myfont"
            android:text="@string/baku"
            android:textColor="@color/dark_blue"
            app:drawableStartCompat="@drawable/ic_location"
            app:drawableTint="@color/dark_blue" />

        <TextView
            android:id="@+id/txt_btnsheet_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/myfont"
            android:text="@string/beef"
            android:textColor="@color/dark_blue"
            app:drawableStartCompat="@drawable/ic_location"
            app:drawableTint="@color/dark_blue" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_btnsheet_meal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/myfont"
        android:text="@string/meal_name"
        android:textColor="@color/dark_blue"
        app:layout_constraintStart_toStartOf="@id/linear_btnsheet"
        app:layout_constraintTop_toBottomOf="@id/linear_btnsheet" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/myfont"
        android:text="@string/read_more"
        android:textColor="@color/dark_blue"
        app:layout_constraintStart_toStartOf="@id/txt_btnsheet_meal_name"
        app:layout_constraintTop_toBottomOf="@id/txt_btnsheet_meal_name" />


</androidx.constraintlayout.widget.ConstraintLayout>